# greet

./: pig.py  pyproject.toml
cli_commands/: generate.py  init.py  upload.py
config/: service-account-file.json
greet/: main.py
